--- a/info.yaml
+++ b/info.yaml
@@ -42,14 +42,14 @@ pinout:
   uo[7]: "out[7]"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "inout[0]"
+  uio[1]: "inout[1]"
+  uio[2]: "inout[2]"
+  uio[3]: "inout[3]"
+  uio[4]: "inout[4]"
+  uio[5]: "inout[5]"
+  uio[6]: "inout[6]"
+  uio[7]: "inout[7]"
 
 # Do not change!
 yaml_version: 6
